# file_meta_data

./: .gitignore  README.md  _version.py  file_meta_data.py  file_metadata.py  file_metadata3.py  requirements.txt  setup.cfg  setup.py  versionfile.py
.github/workflows/: misspell.yaml  release_build.yaml  tag_and_release.yaml  test_build.yaml  test_tmp.yaml  yamllint.yaml
python2/: setup.py
