[metadata]
name = file_metadata
version = 0.1.1
author = JGStew
author_email = noreply@jgstew.com
description = A python hachoir metadata example
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
python_requires = >=3.6
install_requires =
    hachoir
